Add styles to the app

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,9 @@
 //Colours
+$dark-grey: #333;
+$grey: #666;
+$dark-blue: #364051;
+$light-blue: #1c88bf;
+$off-white: #f7f7f7;
 
 //Spacing/Sizing
 $s-size: 1.2rem;
