some style changes

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,8 @@
 //Colours
 $dark-grey: #333;
 $grey: #666;
+$blue: #2e5090;
+$blue-shadow: #eefbfb;
 $dark-blue: #364051;
 $light-blue: #1c88bf;
 $off-white: #f7f7f7;
