--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: $dark-blue;
+  background: $blue;
 }
 
 .header__content {
@@ -14,5 +14,10 @@
   text-decoration: none;
   h1 {
     margin: 0;
+    transition: color 0.3s ease;
   }
+}
+
+.header__title h1:hover {
+  color: $blue-shadow;
 }
