--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -19,9 +19,15 @@
   flex-direction: column;
   padding: $s-size;
   text-decoration: none;
-  transition: background-color 0.4s ease;
+  transition: background-color 0.6s ease;
+  transition: border-color 0.6s ease;
+  transition: border-top 0.6s ease;
+  transition: color 0.3s ease;
   &:hover {
     background-color: darken($off-white, 4%);
+    border-color: $dark-grey;
+    border-top: 1px solid $dark-grey;
+    color: $light-blue;
   }
   @media (min-width: $desktop-breakpoint) {
     align-items: center;
