--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  background-color: $off-white;
+  background-color: $blue-shadow;
   margin-bottom: $l-size;
   padding: $l-size 0;
 }
